fixed left gap issue

--- a/styles.css
+++ b/styles.css
@@ -66,10 +66,14 @@ body {
     padding: 20px 60px;
     font-size: 3rem;
     border-radius: 40px;
+    background-color: #9FB7B9;
 }
 @media (max-width: 576px) {
     .projectTitle {
         font-size: 55px;
+    }
+    .startTitle {
+        font-size: 6rem;
     }
 }
 
